--- a/app/src/tools/core/tabs/CaptureVideoWidget.ui
+++ b/app/src/tools/core/tabs/CaptureVideoWidget.ui
@@ -34,7 +34,7 @@
         <string/>
        </property>
        <property name="icon">
-        <iconset resource="../../res/resources.qrc">
+        <iconset resource="../../../res/resources.qrc">
          <normaloff>:/record.png</normaloff>
          <normalon>:/recordstop.png</normalon>:/record.png</iconset>
        </property>
@@ -260,7 +260,7 @@
               <bool>true</bool>
              </property>
              <attribute name="horizontalHeaderVisible">
-              <bool>true</bool>
+              <bool>false</bool>
              </attribute>
              <attribute name="horizontalHeaderStretchLastSection">
               <bool>true</bool>
@@ -318,7 +318,7 @@
              </property>
              <layout class="QHBoxLayout" name="horizontalLayout_2_0">
               <item>
-               <widget class="QLabel" name="label">
+               <widget class="QLabel" name="codecLabel">
                 <property name="text">
                  <string>Codec</string>
                 </property>
@@ -385,7 +385,7 @@
   </customwidget>
  </customwidgets>
  <resources>
-  <include location="../../res/resources.qrc"/>
+  <include location="../../../res/resources.qrc"/>
  </resources>
  <connections/>
 </ui>
