Fix for bug #1033 - Added + button to create new items

--- a/app/src/res/resources.qrc
+++ b/app/src/res/resources.qrc
@@ -49,5 +49,6 @@
         <file>scan4x.png</file>
         <file>scan10x.png</file>
         <file>scan20x.png</file>
+        <file>add.png</file>
     </qresource>
 </RCC>
