--- a/app/src/tools/core/tabs/CollectionToolWidget.ui
+++ b/app/src/tools/core/tabs/CollectionToolWidget.ui
@@ -7,7 +7,7 @@
     <x>0</x>
     <y>0</y>
     <width>640</width>
-    <height>480</height>
+    <height>166</height>
    </rect>
   </property>
   <property name="windowTitle">
@@ -15,9 +15,9 @@
   </property>
   <layout class="QVBoxLayout" name="verticalLayout">
    <item>
-    <layout class="QGridLayout" name="gridLayout">
+    <layout class="QGridLayout" name="m_nameGridLayout">
      <item row="0" column="0">
-      <widget class="QLabel" name="nameLabel">
+      <widget class="QLabel" name="m_nameLabel">
        <property name="sizePolicy">
         <sizepolicy hsizetype="Minimum" vsizetype="Preferred">
          <horstretch>0</horstretch>
@@ -94,9 +94,9 @@
     </layout>
    </item>
    <item>
-    <layout class="QGridLayout" name="gridLayout_2">
+    <layout class="QGridLayout" name="m_descriptionGridLayout">
      <item row="0" column="0">
-      <widget class="QLabel" name="descriptionLabel">
+      <widget class="QLabel" name="m_descriptionLabel">
        <property name="frameShape">
         <enum>QFrame::NoFrame</enum>
        </property>
