--- a/app/src/tools/core/tabs/CreateFloorPlanWidget.ui
+++ b/app/src/tools/core/tabs/CreateFloorPlanWidget.ui
@@ -295,7 +295,7 @@
          </property>
          <layout class="QHBoxLayout" name="toolLayout">
           <item>
-           <widget class="QToolButton" name="btnRotate">
+           <widget class="QToolButton" name="m_rotateBtn">
             <property name="enabled">
              <bool>false</bool>
             </property>
@@ -306,13 +306,13 @@
              <string/>
             </property>
             <property name="icon">
-             <iconset resource="../../res/resources.qrc">
+             <iconset resource="../../../res/resources.qrc">
               <normaloff>:/flip.png</normaloff>:/flip.png</iconset>
             </property>
            </widget>
           </item>
           <item>
-           <widget class="QToolButton" name="btnMatch">
+           <widget class="QToolButton" name="m_matchBtn">
             <property name="enabled">
              <bool>false</bool>
             </property>
@@ -323,13 +323,13 @@
              <string/>
             </property>
             <property name="icon">
-             <iconset resource="../../res/resources.qrc">
+             <iconset resource="../../../res/resources.qrc">
               <normaloff>:/match.png</normaloff>:/match.png</iconset>
             </property>
            </widget>
           </item>
           <item>
-           <widget class="QToolButton" name="btnStitch">
+           <widget class="QToolButton" name="m_stitchBtn">
             <property name="enabled">
              <bool>false</bool>
             </property>
@@ -340,13 +340,13 @@
              <string/>
             </property>
             <property name="icon">
-             <iconset resource="../../res/resources.qrc">
+             <iconset resource="../../../res/resources.qrc">
               <normaloff>:/stitch.png</normaloff>:/stitch.png</iconset>
             </property>
            </widget>
           </item>
           <item>
-           <widget class="QToolButton" name="btnSave">
+           <widget class="QToolButton" name="m_saveBtn">
             <property name="enabled">
              <bool>false</bool>
             </property>
@@ -357,13 +357,13 @@
              <string/>
             </property>
             <property name="icon">
-             <iconset resource="../../res/resources.qrc">
+             <iconset resource="../../../res/resources.qrc">
               <normaloff>:/apply.png</normaloff>:/apply.png</iconset>
             </property>
            </widget>
           </item>
           <item>
-           <widget class="QToolButton" name="btnCancel">
+           <widget class="QToolButton" name="m_cancelBtn">
             <property name="enabled">
              <bool>false</bool>
             </property>
@@ -374,7 +374,7 @@
              <string/>
             </property>
             <property name="icon">
-             <iconset resource="../../res/resources.qrc">
+             <iconset resource="../../../res/resources.qrc">
               <normaloff>:/clear.png</normaloff>:/clear.png</iconset>
             </property>
            </widget>
@@ -444,9 +444,9 @@
         </widget>
        </item>
        <item>
-        <layout class="QHBoxLayout" name="horizontalLayout_99">
+        <layout class="QHBoxLayout" name="horizontalLayout">
          <item>
-          <widget class="QPushButton" name="btnCreateFloorPlan">
+          <widget class="QPushButton" name="m_createFloorPlanBtn">
            <property name="enabled">
             <bool>true</bool>
            </property>
@@ -472,7 +472,7 @@
   </customwidget>
  </customwidgets>
  <resources>
-  <include location="../../res/resources.qrc"/>
+  <include location="../../../res/resources.qrc"/>
  </resources>
  <connections/>
 </ui>
