--- a/app/src/tools/core/tabs/TargetsWidget.ui
+++ b/app/src/tools/core/tabs/TargetsWidget.ui
@@ -81,7 +81,7 @@
             <string/>
            </property>
            <property name="icon">
-            <iconset resource="../../res/resources.qrc">
+            <iconset resource="../../../res/resources.qrc">
              <normaloff>:/search.png</normaloff>:/search.png</iconset>
            </property>
            <property name="checkable">
@@ -107,7 +107,7 @@
             <string/>
            </property>
            <property name="icon">
-            <iconset resource="../../res/resources.qrc">
+            <iconset resource="../../../res/resources.qrc">
              <normaloff>:/clear.png</normaloff>:/clear.png</iconset>
            </property>
            <property name="checkable">
@@ -151,7 +151,7 @@
             <string/>
            </property>
            <property name="icon">
-            <iconset resource="../../res/resources.qrc">
+            <iconset resource="../../../res/resources.qrc">
              <normaloff>:/search.png</normaloff>:/search.png</iconset>
            </property>
            <property name="checkable">
@@ -177,7 +177,7 @@
             <string/>
            </property>
            <property name="icon">
-            <iconset resource="../../res/resources.qrc">
+            <iconset resource="../../../res/resources.qrc">
              <normaloff>:/clear.png</normaloff>:/clear.png</iconset>
            </property>
            <property name="checkable">
@@ -224,7 +224,7 @@
             <string/>
            </property>
            <property name="pixmap">
-            <pixmap resource="../../res/resources.qrc">:/forward.png</pixmap>
+            <pixmap resource="../../../res/resources.qrc">:/forward.png</pixmap>
            </property>
           </widget>
          </item>
@@ -245,7 +245,7 @@
          <item>
           <widget class="QPushButton" name="m_printTargetBtn">
            <property name="text">
-            <string>Print...</string>
+            <string>&amp;Print Target</string>
            </property>
           </widget>
          </item>
@@ -279,7 +279,7 @@
   </customwidget>
  </customwidgets>
  <resources>
-  <include location="../../res/resources.qrc"/>
+  <include location="../../../res/resources.qrc"/>
  </resources>
  <connections/>
 </ui>
