--- a/app/src/tools/core/tabs/CaptureVideoWidget.ui
+++ b/app/src/tools/core/tabs/CaptureVideoWidget.ui
@@ -6,7 +6,7 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>762</width>
+    <width>757</width>
     <height>480</height>
    </rect>
   </property>
@@ -81,7 +81,7 @@
       </widget>
      </item>
      <item>
-      <spacer name="horizontalSpacer_2">
+      <spacer name="topBarHorizontalSpacer">
        <property name="sizePolicy">
         <sizepolicy hsizetype="Minimum" vsizetype="Minimum">
          <horstretch>0</horstretch>
@@ -114,7 +114,7 @@
      </property>
      <widget class="ImageGrid" name="m_imageGrid" native="true">
       <property name="enabled">
-       <bool>false</bool>
+       <bool>true</bool>
       </property>
       <property name="sizePolicy">
        <sizepolicy hsizetype="Preferred" vsizetype="Preferred">
@@ -354,7 +354,7 @@
             </widget>
            </item>
            <item>
-            <spacer name="verticalSpacer">
+            <spacer name="advancedVerticalSpacer">
              <property name="orientation">
               <enum>Qt::Vertical</enum>
              </property>
