--- a/app/src/tools/core/tabs/CollectionToolWidget.ui
+++ b/app/src/tools/core/tabs/CollectionToolWidget.ui
@@ -73,7 +73,7 @@
        <property name="maximumSize">
         <size>
          <width>30</width>
-         <height>16777215</height>
+         <height>27</height>
         </size>
        </property>
        <property name="text">
