--- a/app/src/tools/core/tabs/CollateResultsWidget.ui
+++ b/app/src/tools/core/tabs/CollateResultsWidget.ui
@@ -15,8 +15,11 @@
   </property>
   <layout class="QVBoxLayout" name="verticalLayout_1">
    <item>
-    <layout class="QHBoxLayout" name="horizontalLayout_floor_plan_file">
-     <item>
+    <layout class="QGridLayout" name="gridLayout" rowstretch="0,0">
+     <property name="spacing">
+      <number>0</number>
+     </property>
+     <item row="0" column="0">
       <widget class="QLabel" name="floor_plan_file_label">
        <property name="text">
         <string>&amp;Floor Plan File  </string>
@@ -26,14 +29,14 @@
        </property>
       </widget>
      </item>
-     <item>
+     <item row="0" column="1">
       <widget class="QLineEdit" name="m_floorPlanFileNameEdit">
        <property name="enabled">
         <bool>false</bool>
        </property>
       </widget>
      </item>
-     <item>
+     <item row="0" column="2">
       <widget class="QToolButton" name="m_browsePlanBtn">
        <property name="enabled">
         <bool>true</bool>
@@ -44,6 +47,12 @@
          <verstretch>0</verstretch>
         </sizepolicy>
        </property>
+       <property name="maximumSize">
+        <size>
+         <width>32</width>
+         <height>28</height>
+        </size>
+       </property>
        <property name="toolTip">
         <string>Browse for file</string>
        </property>
@@ -51,7 +60,7 @@
         <string/>
        </property>
        <property name="icon">
-        <iconset resource="../../res/resources.qrc">
+        <iconset resource="../../../res/resources.qrc">
          <normaloff>:/search.png</normaloff>:/search.png</iconset>
        </property>
        <property name="checkable">
@@ -62,11 +71,14 @@
        </property>
       </widget>
      </item>
-    </layout>
-   </item>
-   <item>
-    <layout class="QHBoxLayout" name="horizontalLayout_floor_mask_file">
-     <item>
+     <item row="1" column="1">
+      <widget class="QLineEdit" name="m_floorMaskFileNameEdit">
+       <property name="enabled">
+        <bool>false</bool>
+       </property>
+      </widget>
+     </item>
+     <item row="1" column="0">
       <widget class="QLabel" name="floor_mask_file_label">
        <property name="text">
         <string>&amp;Floor Mask File</string>
@@ -76,14 +88,7 @@
        </property>
       </widget>
      </item>
-     <item>
-      <widget class="QLineEdit" name="m_floorMaskFileNameEdit">
-       <property name="enabled">
-        <bool>false</bool>
-       </property>
-      </widget>
-     </item>
-     <item>
+     <item row="1" column="2">
       <widget class="QToolButton" name="m_browseMaskBtn">
        <property name="enabled">
         <bool>true</bool>
@@ -94,11 +99,17 @@
          <verstretch>0</verstretch>
         </sizepolicy>
        </property>
+       <property name="maximumSize">
+        <size>
+         <width>32</width>
+         <height>28</height>
+        </size>
+       </property>
        <property name="text">
         <string/>
        </property>
        <property name="icon">
-        <iconset resource="../../res/resources.qrc">
+        <iconset resource="../../../res/resources.qrc">
          <normaloff>:/search.png</normaloff>:/search.png</iconset>
        </property>
        <property name="checkable">
@@ -260,7 +271,7 @@
   </customwidget>
  </customwidgets>
  <resources>
-  <include location="../../res/resources.qrc"/>
+  <include location="../../../res/resources.qrc"/>
  </resources>
  <connections/>
 </ui>
