--- a/app/src/tools/core/tabs/PostProcessWidget.ui
+++ b/app/src/tools/core/tabs/PostProcessWidget.ui
@@ -117,10 +117,7 @@
           </widget>
          </item>
          <item>
-          <layout class="QHBoxLayout" name="horizontalLayout_2_1">
-           <property name="spacing">
-            <number>0</number>
-           </property>
+          <layout class="QGridLayout" name="gridLayout">
            <property name="leftMargin">
             <number>0</number>
            </property>
@@ -133,7 +130,7 @@
            <property name="bottomMargin">
             <number>3</number>
            </property>
-           <item>
+           <item row="0" column="0">
             <widget class="QPushButton" name="m_loadDataBtn">
              <property name="enabled">
               <bool>true</bool>
@@ -143,13 +140,33 @@
              </property>
             </widget>
            </item>
-           <item>
+           <item row="0" column="1">
             <widget class="QPushButton" name="m_postProcessBtn">
              <property name="enabled">
               <bool>true</bool>
              </property>
              <property name="text">
               <string>&amp;Process</string>
+             </property>
+            </widget>
+           </item>
+           <item row="1" column="1">
+            <widget class="QSpinBox" name="m_postProcessResolutionSpinBox">
+             <property name="toolTip">
+              <string>Camera resolution used to calculate coverage</string>
+             </property>
+             <property name="alignment">
+              <set>Qt::AlignRight|Qt::AlignTrailing|Qt::AlignVCenter</set>
+             </property>
+             <property name="value">
+              <number>15</number>
+             </property>
+            </widget>
+           </item>
+           <item row="1" column="0">
+            <widget class="QLabel" name="label">
+             <property name="text">
+              <string>Process Resolution</string>
              </property>
             </widget>
            </item>
