--- a/app/src/tools/core/tabs/TargetsWidget.ui
+++ b/app/src/tools/core/tabs/TargetsWidget.ui
@@ -23,69 +23,26 @@
       <property name="title">
        <string>Target Images</string>
       </property>
-      <layout class="QFormLayout" name="formLayout">
-       <item row="0" column="0">
-        <widget class="QCheckBox" name="m_useStandard">
-         <property name="enabled">
-          <bool>true</bool>
-         </property>
-         <property name="text">
-          <string>Use Standard</string>
-         </property>
-        </widget>
-       </item>
-       <item row="0" column="1">
+      <layout class="QGridLayout" name="gridLayout">
+       <item row="0" column="3">
         <widget class="QComboBox" name="m_targetTypeComboBox">
          <property name="enabled">
           <bool>false</bool>
          </property>
          <property name="sizePolicy">
-          <sizepolicy hsizetype="Expanding" vsizetype="Fixed">
+          <sizepolicy hsizetype="Expanding" vsizetype="Expanding">
            <horstretch>0</horstretch>
            <verstretch>0</verstretch>
           </sizepolicy>
          </property>
         </widget>
        </item>
-       <item row="1" column="0">
-        <widget class="QLabel" name="m_trackingTargetFileNameLabel">
-         <property name="text">
-          <string>Tracking</string>
-         </property>
-        </widget>
-       </item>
-       <item row="1" column="1">
+       <item row="1" column="3">
         <layout class="QHBoxLayout" name="horizontalLayout_21">
          <item>
           <widget class="QLineEdit" name="m_trackingTargetFileNameEdit">
            <property name="enabled">
             <bool>false</bool>
-           </property>
-          </widget>
-         </item>
-         <item>
-          <widget class="QToolButton" name="m_browseTrackingBtn">
-           <property name="enabled">
-            <bool>true</bool>
-           </property>
-           <property name="sizePolicy">
-            <sizepolicy hsizetype="Fixed" vsizetype="Fixed">
-             <horstretch>1</horstretch>
-             <verstretch>0</verstretch>
-            </sizepolicy>
-           </property>
-           <property name="toolTip">
-            <string>Browse for file</string>
-           </property>
-           <property name="text">
-            <string/>
-           </property>
-           <property name="icon">
-            <iconset resource="../../../res/resources.qrc">
-             <normaloff>:/search.png</normaloff>:/search.png</iconset>
-           </property>
-           <property name="checkable">
-            <bool>true</bool>
            </property>
           </widget>
          </item>
@@ -115,16 +72,81 @@
            </property>
           </widget>
          </item>
+         <item>
+          <widget class="QToolButton" name="m_browseTrackingBtn">
+           <property name="enabled">
+            <bool>true</bool>
+           </property>
+           <property name="sizePolicy">
+            <sizepolicy hsizetype="Fixed" vsizetype="Fixed">
+             <horstretch>1</horstretch>
+             <verstretch>0</verstretch>
+            </sizepolicy>
+           </property>
+           <property name="toolTip">
+            <string>Browse for file</string>
+           </property>
+           <property name="text">
+            <string/>
+           </property>
+           <property name="icon">
+            <iconset resource="../../../res/resources.qrc">
+             <normaloff>:/search.png</normaloff>:/search.png</iconset>
+           </property>
+           <property name="checkable">
+            <bool>true</bool>
+           </property>
+          </widget>
+         </item>
         </layout>
        </item>
-       <item row="2" column="0">
-        <widget class="QLabel" name="m_printableTargetFileNameLabel">
+       <item row="0" column="0">
+        <widget class="QCheckBox" name="m_useStandard">
+         <property name="enabled">
+          <bool>true</bool>
+         </property>
          <property name="text">
-          <string>Printable</string>
+          <string>Use Standard</string>
          </property>
         </widget>
        </item>
-       <item row="2" column="1">
+       <item row="7" column="0">
+        <widget class="QPushButton" name="m_printTargetBtn">
+         <property name="sizePolicy">
+          <sizepolicy hsizetype="Minimum" vsizetype="Maximum">
+           <horstretch>0</horstretch>
+           <verstretch>0</verstretch>
+          </sizepolicy>
+         </property>
+         <property name="maximumSize">
+          <size>
+           <width>120</width>
+           <height>16777215</height>
+          </size>
+         </property>
+         <property name="text">
+          <string>&amp;Print Target</string>
+         </property>
+        </widget>
+       </item>
+       <item row="1" column="0">
+        <widget class="QLabel" name="m_trackingTargetFileNameLabel">
+         <property name="text">
+          <string>Tracking</string>
+         </property>
+        </widget>
+       </item>
+       <item row="3" column="3" rowspan="5">
+        <widget class="ImageView" name="m_imageView" native="true">
+         <property name="sizePolicy">
+          <sizepolicy hsizetype="Expanding" vsizetype="Expanding">
+           <horstretch>0</horstretch>
+           <verstretch>100</verstretch>
+          </sizepolicy>
+         </property>
+        </widget>
+       </item>
+       <item row="2" column="3">
         <layout class="QHBoxLayout" name="horizontalLayout_22">
          <item>
           <widget class="QLineEdit" name="m_printableTargetFileNameEdit">
@@ -187,84 +209,70 @@
          </item>
         </layout>
        </item>
-      </layout>
-     </widget>
-     <widget class="QGroupBox" name="groupBox_4">
-      <property name="sizePolicy">
-       <sizepolicy hsizetype="Preferred" vsizetype="Preferred">
-        <horstretch>0</horstretch>
-        <verstretch>100</verstretch>
-       </sizepolicy>
-      </property>
-      <property name="title">
-       <string/>
-      </property>
-      <layout class="QGridLayout" name="gridLayout">
-       <item row="0" column="0">
-        <layout class="QHBoxLayout" name="horizontalLayout_24">
-         <item>
-          <widget class="QLabel" name="label_2">
-           <property name="text">
-            <string>Robot Front</string>
-           </property>
-           <property name="alignment">
-            <set>Qt::AlignRight|Qt::AlignTrailing|Qt::AlignVCenter</set>
-           </property>
-          </widget>
-         </item>
-         <item>
-          <widget class="QLabel" name="label_3">
-           <property name="maximumSize">
-            <size>
-             <width>45</width>
-             <height>40</height>
-            </size>
-           </property>
-           <property name="text">
-            <string/>
-           </property>
-           <property name="pixmap">
-            <pixmap resource="../../../res/resources.qrc">:/forward.png</pixmap>
-           </property>
-          </widget>
-         </item>
-        </layout>
-       </item>
-       <item row="1" column="0">
-        <widget class="ImageView" name="m_imageView">
-         <property name="sizePolicy">
-          <sizepolicy hsizetype="Expanding" vsizetype="Expanding">
-           <horstretch>0</horstretch>
-           <verstretch>100</verstretch>
-          </sizepolicy>
+       <item row="2" column="0">
+        <widget class="QLabel" name="m_printableTargetFileNameLabel">
+         <property name="text">
+          <string>Printable</string>
          </property>
         </widget>
        </item>
        <item row="3" column="0">
-        <layout class="QHBoxLayout" name="horizontalLayout_23">
-         <item>
-          <widget class="QPushButton" name="m_printTargetBtn">
-           <property name="text">
-            <string>&amp;Print Target</string>
-           </property>
-          </widget>
-         </item>
-        </layout>
-       </item>
-       <item row="2" column="0">
-        <spacer name="verticalSpacer">
-         <property name="orientation">
-          <enum>Qt::Vertical</enum>
+        <widget class="QLabel" name="robotFrontLabel">
+         <property name="sizePolicy">
+          <sizepolicy hsizetype="Fixed" vsizetype="Fixed">
+           <horstretch>0</horstretch>
+           <verstretch>0</verstretch>
+          </sizepolicy>
          </property>
-         <property name="sizeHint" stdset="0">
+         <property name="text">
+          <string>Robot Front</string>
+         </property>
+         <property name="alignment">
+          <set>Qt::AlignLeading|Qt::AlignLeft|Qt::AlignVCenter</set>
+         </property>
+        </widget>
+       </item>
+       <item row="4" column="0">
+        <widget class="QLabel" name="arrow">
+         <property name="sizePolicy">
+          <sizepolicy hsizetype="Fixed" vsizetype="Fixed">
+           <horstretch>0</horstretch>
+           <verstretch>0</verstretch>
+          </sizepolicy>
+         </property>
+         <property name="maximumSize">
           <size>
-           <width>20</width>
-           <height>100</height>
+           <width>45</width>
+           <height>40</height>
           </size>
          </property>
-        </spacer>
+         <property name="text">
+          <string/>
+         </property>
+         <property name="pixmap">
+          <pixmap resource="../../../res/resources.qrc">:/forward.png</pixmap>
+         </property>
+         <property name="alignment">
+          <set>Qt::AlignBottom|Qt::AlignHCenter</set>
+         </property>
+         <property name="wordWrap">
+          <bool>false</bool>
+         </property>
+         <property name="indent">
+          <number>0</number>
+         </property>
+        </widget>
        </item>
       </layout>
+      <zorder>m_useStandard</zorder>
+      <zorder>m_targetTypeComboBox</zorder>
+      <zorder>m_trackingTargetFileNameLabel</zorder>
+      <zorder>m_printableTargetFileNameLabel</zorder>
+      <zorder>m_imageView</zorder>
+      <zorder>m_trackingTargetFileNameEdit</zorder>
+      <zorder>m_printTargetBtn</zorder>
+      <zorder>robotFrontLabel</zorder>
+      <zorder>arrow</zorder>
      </widget>
     </widget>
    </item>
@@ -273,7 +281,7 @@
  <customwidgets>
   <customwidget>
    <class>ImageView</class>
-   <extends>QFrame</extends>
+   <extends>QWidget</extends>
    <header>ImageView.h</header>
    <container>1</container>
   </customwidget>
