--- a/app/src/tools/core/tabs/CollateResultsWidget.ui
+++ b/app/src/tools/core/tabs/CollateResultsWidget.ui
@@ -243,7 +243,7 @@
               <bool>true</bool>
              </property>
              <property name="text">
-              <string>&amp;Load</string>
+              <string>&amp;Load Runs</string>
              </property>
             </widget>
            </item>
@@ -253,7 +253,7 @@
               <bool>false</bool>
              </property>
              <property name="text">
-              <string>&amp;Analyse</string>
+              <string>&amp;Analyse Results</string>
              </property>
             </widget>
            </item>
