--- a/app/src/tools/core/tabs/TrackRobotWidget.ui
+++ b/app/src/tools/core/tabs/TrackRobotWidget.ui
@@ -516,17 +516,8 @@ p, li { white-space: pre-wrap; }
               <property name="spacing">
                <number>0</number>
               </property>
-              <property name="leftMargin">
+              <property name="margin">
                <number>0</number>
-              </property>
-              <property name="topMargin">
-               <number>0</number>
-              </property>
-              <property name="rightMargin">
-               <number>0</number>
-              </property>
-              <property name="bottomMargin">
-               <number>3</number>
               </property>
               <item>
                <widget class="QTableWidget" name="m_videoTable">
